--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,46 @@
-
-.header-container
-{
+.header-container {
+  margin: 0px;
+  height: 50px;
   display: flex;
   border: 1px solid grey;
   width: 100%;
+
+  flex-wrap: wrap;
+}
+.left-nav {
+  display: flex;
+  flex: 2;
+}
+.left-logo {
+  flex: 1;
+}
+.menu {
+  flex: 0.1;
+}
+.search {
+  flex: 0.1;
+}
+.logo-nav {
+  display: flex;
+  flex: 1;
+}
+.logo {
+  height: 64px;
+  width: 190px;
 }
 
-.logo
-{
-  flex: 1;
-  width: 156px;
-  height: 40px;
+.right-nav {
+  display: flex;
+  flex: 2;
+  justify-content: flex-end;
+}
+.login {
+  height: 35px;
+  width: 60px;
+  background-color: black;
+  text-align: center;
+  color: white;
+}
+.right-logo {
+  margin-right: 10px;
 }
