--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,9 @@
-body{
-  width: 100%;
-}
-.flexbox
-{
+.flexbox {
   display: flex;
   margin: 0 0 0 0;
   list-style-type: none;
 }
- .login-btn
-{
+.login-btn {
   background-color: #000000;
   color: white;
   border: 0px solid black;
@@ -18,20 +13,17 @@ body{
 }
 .left-logo {
   flex: 1;
-  font-family: 'NYTFranklin';
+  font-family: "NYTFranklin";
   font-size: 14px;
   font-weight: bold;
-
 }
 
-.left-logo a
-{
+.left-logo a {
   color: #000000;
   text-decoration: none;
 }
 
-.left-logo a:hover
-{
+.left-logo a:hover {
   text-decoration: underline;
 }
 .menu {
@@ -42,77 +34,153 @@ body{
 }
 
 .logo-container {
-flex : 1;
+  flex: 1;
 }
-.logo
-{
+.logo {
   width: 160px;
   height: 32px;
 }
 .right-logo {
   margin-right: 20px;
-  font-family: 'NYTFranklin';
+  font-family: "NYTFranklin";
   font-size: 14px;
   font-weight: normal;
 }
 
 .right-logo a {
-
   color: #000000;
 }
-.main-container{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-.title{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
- .title a img{
-     width: 900px;
-     height: 500px;
- }
- .title h1{
 
-  font-family: 'NYTCheltenham';
- }
- .title h3{
-  font-family: 'NYTFranklin';
+.title-1 {
+  width: 450px;
+  height: 70px;
+  margin-left: 300px;
+}
+.title-1 h1 {
+  font-family: "NYTCheltenham";
+}
+.title-2 {
+  width: 1000px;
+  height: 500px;
+  margin-top: 20px;
+  margin-left: 200px;
+}
+.title-2 a img {
+  width: 1000px;
+  height: 500px;
+}
+.title-3 {
+  margin-top: 0px;
+  margin-left: 200px;
+}
+.title-3 p {
+  font-family: "NYTImperial";
+  font-size: 14px;
+  color: #666666;
+  margin-bottom: 0px;
+}
+#credit {
+  color: #888888;
+  margin-top: 0px;
+}
+.by {
+  top: 20px;
+  margin-left: 30%;
+}
+.by h3 {
+  font-family: "NYTFranklin";
   font-weight: bold;
+  font-size: 15px;
+  color: #333333;
+}
+.article-descp {
+  display: flex;
+  justify-content: center;
+}
+.date {
+  margin-right: 120px;
+  font-family: "NYTFranklin";
+  font-size: 13px;
+  font-weight: normal;
+  color: #333333;
+}
+.social-icons {
+  display: flex;
   list-style-type: none;
+}
+
+ul li i {
+  margin-right: 10px;
+}
+.social-icons li a img {
+  height: 15px;
+  width: 15px;
+  margin: 7px;
+}
+.social-icons li:hover {
+  background: white;
+  border: 1px solid #d4d4d4;
+}
+.social-icons li {
+  height: 28px;
+  width: 28px;
+  background: #d4d4d4;
+  border-radius: 14px;
+  text-align: center;
+  margin: 10px;
+}
+.article{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.article p{
+  font-family: 'NYTImperial';
+  font-size: 20px;
+  font-weight: lighter;
+  color: #333333;
+  align-self: center;
+}
+ #img-1{
+   height: 600px;
+   width: 900px;
  }
- .title p {
+ #img-2{
+   width: 700px;
+   height: 400px;
+   
+ }
+ .article iframe{
+   height: 400px;
+   width: 800px;
+ }
+ #i-para{
    font-family: 'NYTImperial';
+   font-size: 15px;
+   font-weight: lighter;
+   color: #888888;
  }
- .by
- {
-  margin-right: 350px;
- }
-
-
- .wrap
- {
-   display: flex;
- }
-
- .date
- {
-  flex: 1;
-  margin-left: 0px;
-  margin-right: 220px;
- }
- .social-icons{
-
-   display: flex;
-   list-style-type: none;
-   margin-left: 20px;
-   margin-right:
- }
-
- ul li i
- {
-
-   margin-right: 10px;
- }
+ .article-descp2 {
+  display: flex;
+  justify-content: center;
+}
+.article-descp button{
+  width: 350px;
+  height: 40px;
+  margin-top: 15px;
+  background-color: rgb(50, 104, 145);
+  color: white;
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  font-size: 0.8125rem;
+  font-weight: 600;
+  letter-spacing: 0.05em;
+  line-height: 1.5rem;
+  text-transform: uppercase;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(50, 104, 145);
+  border-image: initial;
+  border-radius: 3px;
+  padding: 5px 0px;
+  transition: background-color 0.6s ease 0s;
+}
