--- a/styles/style.css
+++ b/styles/style.css
@@ -364,20 +364,76 @@ ul li hr {
   flex-wrap: wrap;
   width: 100%;
   height: 500px;
-  border: solid #000000;
 }
 .left-footer {
   width: 75%;
   height: 400px;
-  border: solid #333333;
+  display: flex;
+  border-right: 1px solid #F7F7F7;
+  border-bottom: 1px solid #F7F7F7;
+  border-top: 1px solid #F7F7F7;
+}
+
+.left-footer-list
+{
+  list-style-type: none;
+  flex: 1;
+}
+
+.left-footer-list a
+{
+  text-decoration: none;
+  font-family: "NYTFranklin";
+  color: #000000;
+}
+
+.left-footer-list a:hover
+{
+  text-decoration: underline;
+}
+
+.left-footer-list h5
+{
+  font-family: "NYTFranklin";
+  color: #000000;
+  font-weight: bold;
 }
 .right-footer {
   width: 23%;
   height: 400px;
-  border: solid #333333;
+  display: flex;
 }
 .bottom-footer {
   width: 100%;
   height: 50px;
-  border: solid red;
+
+}
+
+.footer-header
+{
+  display: flex;
+
+}
+
+.footer-header li
+{
+
+  list-style-type: none;
+  flex: 1 1 ;
+  margin-left: 0;
+}
+
+.footer-header li a
+{
+  color: grey;
+ font-family: "NYTFranklin";
+ font-weight: lighter;
+ text-decoration: none;
+ font-size: 0.7rem;
+}
+
+
+.footer-header li a:hover
+{
+  text-decoration: underline;
 }
