--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,11 @@ nav {
   background-color: #fff;
   border-bottom: 1.2px solid #e2e2e2;
 }
+
+.main-container {
+  padding-top: 10px;
+}
+
 .flexbox {
   display: flex;
   margin: 0 0 0 0;
@@ -66,6 +71,13 @@ nav {
   width: 450px;
   height: 70px;
   margin-left: 300px;
+}
+
+.top-nav {
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  left: 0px;
 }
 
 .title-1 h1 {
@@ -169,27 +181,33 @@ ul li i {
   color: #333333;
   line-height: 1.3em;
 }
+
 .article p a {
   color: #326891;
 }
+
 .article p a:hover {
   text-decoration: none;
 }
+
 .article-img1 {
   background: url("/images/2.png");
 }
+
 .article-img1 h2 {
   font-family: "NYTCheltenham";
   font-size: 20px;
   font-weight: bold;
   color: #000000;
 }
+
 .article-img1 p {
   font-family: "NYTCheltenham";
   font-size: 15px;
   font-weight: normal;
   color: #666666;
 }
+
 .article-img2 {
   margin-right: 70px;
 }
@@ -217,6 +235,7 @@ ul li i {
   color: #666666;
   margin: 10px 0 0 0;
 }
+
 #i-para2 {
   font-family: "NYTImperial";
   font-size: 13px;
@@ -224,6 +243,7 @@ ul li i {
   color: #888888;
   margin: 0px;
 }
+
 #i-para3 {
   font-family: "NYTImperial";
   font-size: 15px;
@@ -231,6 +251,7 @@ ul li i {
   color: #666666;
   margin: 10px 0 0 0;
 }
+
 #i-para4 {
   font-family: "NYTImperial";
   font-size: 13px;
@@ -271,6 +292,7 @@ ul li i {
   width: 100%;
   height: 1200px;
 }
+
 .bottom-leftsidebar {
   display: flex;
   flex-wrap: wrap;
@@ -281,6 +303,7 @@ ul li i {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
 }
+
 .bottom-leftsidebar h5 {
   width: 70%;
   font-family: "NYTFranklin";
@@ -288,6 +311,7 @@ ul li i {
   color: #000000;
   font-size: 16px;
 }
+
 .bottom-rightsidebar {
   width: 25%;
   height: 500px;
@@ -295,9 +319,11 @@ ul li i {
   margin-top: 20px;
   border-top: 1px solid black;
 }
+
 .bottom-rightsidebar a {
   text-decoration: none;
 }
+
 .bottom-rightsidebar a h4 {
   font-family: "NYTCheltenham";
   font-weight: 575;
@@ -308,9 +334,11 @@ ul li i {
   margin-bottom: 3px;
   margin-top: 2px;
 }
+
 .bottom-rightsidebar a h4:hover {
   color: #666666;
 }
+
 .bottom-rightsidebar a h5 {
   font-family: "NYTFranklin";
   font-weight: bold;
@@ -319,6 +347,7 @@ ul li i {
   border-bottom: 1px solid grey;
   padding-bottom: 20px;
 }
+
 .boxes {
   list-style-type: none;
   display: flex;
@@ -388,6 +417,7 @@ ul li hr {
   height: 400px;
   margin: 20px;
 }
+
 .left2 h5 {
   width: 70%;
   font-family: "NYTFranklin";
@@ -402,6 +432,7 @@ ul li hr {
   width: 100%;
   height: 500px;
 }
+
 .left-footer {
   width: 75%;
   height: 400px;
@@ -425,15 +456,20 @@ ul li hr {
 .left-footer-list a:hover {
   text-decoration: underline;
 }
+
 .right-footer {
   width: 23%;
   height: 400px;
   display: flex;
 }
+
 .bottom-footer {
+  position: fixed;
   width: 100%;
   height: 50px;
   border-top: 1px solid rgb(235, 235, 235);
+  top: 605px;
+  background-color: white;
 }
 
 .footer-header {
@@ -457,6 +493,7 @@ ul li hr {
 .footer-header li a:hover {
   text-decoration: underline;
 }
+
 .left-footer-list li img {
   height: 15px;
   width: 15px;
@@ -471,9 +508,11 @@ ul li hr {
   margin-bottom: 10px;
   margin-top: 10px;
 }
+
 a:-webkit-any-link {
   cursor: pointer;
 }
+
 .right-footer-list {
   list-style-type: none;
   flex: 1;
@@ -487,4 +526,26 @@ a:-webkit-any-link {
 
 .right-footer-list a:hover {
   text-decoration: underline;
+}
+
+.floating-div {
+  position: absolute;
+  display: flex;
+  width: 1024px;
+  height: 180px;
+  top: 4320px;
+  left: 200px;
+}
+
+.floating-item {
+  flex: 1;
+}
+
+.floating-item h5 {
+  font-family: "NYTCheltenham";
+  font-weight: lighter;
+}
+
+.floating-item span {
+  font-weight: bold;
 }
