--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,7 @@ nav {
 }
 
 .top-nav {
+  padding-top: 10px;
   position: fixed;
   top: 0px;
   right: 0px;
@@ -82,6 +83,7 @@ nav {
 
 .title-1 h1 {
   font-family: "NYTCheltenham";
+  padding-top: 10px;
 }
 
 .title-2 {
@@ -464,7 +466,6 @@ ul li hr {
 }
 
 .bottom-footer {
-  position: fixed;
   width: 100%;
   height: 50px;
   border-top: 1px solid rgb(235, 235, 235);
