removed some issues at style file

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ nav {
 .login-btn {
   background-color: #000000;
   color: white;
-  border: 0px solid black;
+  border: 0 solid black;
   border-radius: 10%;
   width: 64px;
   margin-right: 15px;
@@ -76,9 +76,9 @@ nav {
 .top-nav {
   padding-top: 10px;
   position: fixed;
-  top: 0px;
-  right: 0px;
-  left: 0px;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 .title-1 h1 {
@@ -99,7 +99,7 @@ nav {
 }
 
 .title-3 {
-  margin-top: 0px;
+  margin-top: 0;
   margin-left: 200px;
 }
 
@@ -107,12 +107,12 @@ nav {
   font-family: "NYTImperial";
   font-size: 14px;
   color: #666666;
-  margin-bottom: 0px;
+  margin-bottom: 0;
 }
 
 #credit {
   color: #888888;
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 .by {
@@ -243,7 +243,7 @@ ul li i {
   font-size: 13px;
   font-weight: lighter;
   color: #888888;
-  margin: 0px;
+  margin: 0;
 }
 
 #i-para3 {
@@ -259,7 +259,7 @@ ul li i {
   font-size: 13px;
   font-weight: lighter;
   color: #888888;
-  margin: 0px;
+  margin: 0;
 }
 
 .article-descp2 {
@@ -284,7 +284,7 @@ ul li i {
   border-color: rgb(50, 104, 145);
   border-image: initial;
   border-radius: 3px;
-  padding: 5px 0px;
+  padding: 5px 0;
   transition: background-color 0.6s ease 0s;
 }
 
